# My_Projects

./: .gitignore  CLAUDE.md  comparison.txt  results.html  workflow_diagram.html
WEEK 2/Day 3/: Refactor.ipynb  Refactor_Final_Pedro_Biain.ipynb  lab202refactoring_clean.ipynb  malformed.json  products.json
WEEK_2/Day 2/: failure_analysis.json  failure_analysis_table.csv  lab_report.md  prompt_engineering_lab_Pedro_Biain.ipynb
WEEK_2/Day 3/: Refactor_Report.md  descriptions_results.json  invalid_products.json  results.json  test_output.json
WEEK_3/: requirements.txt
WEEK_3/Day_3/: analysis_report.docx  normalobjects_langchain-Pedro_Biain.ipynb  normalobjects_langchain.ipynb
WEEK_3/Day_4/: RAG_Performance_Evaluation_Report.docx  relevance_scoring_rerankers.ipynb
WEEK_3/Day_5/: .gitignore  LAB_REPORT.md  MCP_SETUP.md  mcp_introduction.ipynb  mcp_langchain.py  output.txt  requirements.txt
WEEK_4/Day_1/: .gitignore  final_report.md  final_report.txt  normalobjects_langgraph.py  results.html
WEEK_5/: Project 3.ipynb  README.md  SELF_EVALUATION.md  agent.py  apart_agent.ipynb  ingest.py  mcp_langchain.py  project_alpha.txt  project_beta.txt  requirements.txt  server.py
WEEK_9/vaultguard-api/: .gitignore  pyproject.toml
WEEK_9/vaultguard-api/evals/: VaultGuard_UseCase_Definition.md  evaluate_classifier.py  evaluate_historical.py
WEEK_9/vaultguard-api/n8n_config/: vaultguard_api.json
WEEK_9/vaultguard-api/src/: api_server.py  evals.py  invoice_processor.py  llm_client.py  server.py  sheets_client.py
results/: evaluation_results.json
(+157 files in other folders)
